chore: release for ES6 module only

--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "dist/black-es6-module.js",
   "directories": {},
   "scripts": {
-    "start": "gulp",
+    "postinstall": "npm run build",
     "docs": "node scripts/docs.js",
-    "watch-es5": "gulp watch-es5",
-    "watch-es6": "gulp watch-es6",
-    "watch-es6-module": "gulp watch-es6-module",
+    "build": "gulp",
+    "watch-build": "gulp watch-es6-module",
     "watch-test": "gulp watch-test",
-    "postinstall": "gulp",
     "test": "jest --config jest.config.json --runInBand --silent",
     "test-watch": "jest --config jest.config.json --runInBand --watch",
     "coverage": "jest --coverage --config jest.config.json --runInBand --silent",
