--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "postinstall": "npm run build",
     "docs": "node scripts/docs.js",
-    "build": "gulp",
-    "watch-build": "gulp watch-es6-module",
+    "build": "gulp build",
+    "watch-build": "gulp watch-build",
     "watch-test": "gulp watch-test",
     "test": "jest --config jest.config.json --runInBand --silent",
     "test-watch": "jest --config jest.config.json --runInBand --watch",
@@ -23,22 +23,10 @@
   "author": "Massive Heights",
   "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-concat": "^1.0.3",
-    "babel-core": "^6.5.2",
-    "babel-plugin-root-import": "^5.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "browser-sync": "^2.18.12",
-    "google-closure-compiler": "^20161024.3.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
-    "gulp-preprocess": "^2.0.0",
-    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-template": "^4.0.0",
     "gulp-watch": "^4.3.5",
     "jest": "^22.4.2",
     "jsdoc": "^3.4.3",
