--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "jsdoc": "^3.4.3",
     "jsdoc-to-markdown": "^3.0.0",
     "jsdom": "^11.11.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
