--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "directories": {},
   "scripts": {
     "postinstall": "npm run build",
-    "docs": "node scripts/docs.js",
+    "docs": "esdoc",
     "build": "gulp build",
     "build:watch": "gulp build:watch",
     "test": "jest --config jest.config.json --runInBand --silent",
@@ -25,13 +25,13 @@
     "gulp-concat": "^2.6.0",
     "gulp-replace": "^0.6.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-watch": "^4.3.5",
-    "jest": "^22.4.2",
-    "jsdoc": "^3.4.3",
-    "jsdoc-to-markdown": "^3.0.0",
-    "jsdom": "^11.11.0"
+    "gulp-watch": "^4.3.5"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "jest": "^22.4.2",
+    "jsdom": "^11.11.0"
   }
 }
