--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "black-engine",
   "version": "0.5.8",
-  "description": "",
   "main": "dist/es6-module.js",
-  "directories": {},
   "scripts": {
-    "postinstall": "npm run build",
     "docs": "esdoc",
     "build": "gulp build",
     "build:watch": "gulp build:watch",
@@ -20,17 +17,16 @@
   },
   "author": "Massive Heights",
   "license": "SEE LICENSE IN LICENSE.md",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-replace": "^0.6.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-watch": "^4.3.5"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-replace": "^0.6.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-watch": "^4.3.5",
     "jest": "^22.4.2",
     "jsdom": "^11.11.0"
   }
